[gd_scene load_steps=15 format=2]

[ext_resource path="res://Resources/Anarchy/Textures/Missions/missions_gradient_1_192x192.png" type="Texture2D" id=1]
[ext_resource path="res://Resources/Anarchy/Scripts/missions_grid_node.gd" type="Script" id=2]
[ext_resource path="res://Nodes/UI/MapFinished.png" type="Texture2D" id=3]
[ext_resource path="res://Resources/Anarchy/Textures/Missions/missions_node_2_192x192.png" type="Texture2D" id=4]
[ext_resource path="res://Resources/Anarchy/Textures/Missions/missions_node_3_192x192.png" type="Texture2D" id=5]
[ext_resource path="res://Resources/Anarchy/Textures/Missions/missions_node_1_192x192.png" type="Texture2D" id=6]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="CanvasItemMaterial" id=9]
blend_mode = 1

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ring1:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ring2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ring3:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("grad:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "bongo"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ring1:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 5 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ring2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 5 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ring3:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0, 5 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("grad:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PackedFloat32Array( 0, 2.5, 5 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2, 2 ), Vector2( 1, 1 ) ]
}

[node name="missions_grid_node" type="Control"]
self_modulate = Color( 0.643137, 1, 0.933333, 1 )
offset_right = 96.0
offset_bottom = 96.0
custom_minimum_size = Vector2( 96, 96 )
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
offset_right = 96.0
offset_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/hover = SubResource( 3 )
theme_override_styles/pressed = SubResource( 4 )
theme_override_styles/focus = SubResource( 5 )
theme_override_styles/disabled = SubResource( 6 )
theme_override_styles/normal = SubResource( 2 )
toggle_mode = true

[node name="grad" type="TextureRect" parent="."]
self_modulate = Color( 0.137255, 0.760784, 0.294118, 0.2 )
material = SubResource( 9 )
offset_right = 96.0
offset_bottom = 96.0
custom_minimum_size = Vector2( 96, 96 )
pivot_offset = Vector2( 48, 48 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true

[node name="ring4" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.862745, 0.176471, 0.329412, 1 )
offset_left = -10.0001
offset_top = 106.0
offset_right = 106.0
offset_bottom = 222.0
custom_minimum_size = Vector2( 96, 96 )
rotation = -89.9999
pivot_offset = Vector2( 58, 58 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true

[node name="ring5" type="TextureRect" parent="ring4"]
offset_right = 116.0
offset_bottom = 116.0
custom_minimum_size = Vector2( 96, 96 )
rotation = -89.9999
scale = Vector2( 0.938269, 0.938269 )
pivot_offset = Vector2( 58, 58 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true

[node name="ring1" type="TextureRect" parent="."]
self_modulate = Color( 0.862745, 0.176471, 0.329412, 1 )
offset_right = 96.0
offset_bottom = 96.0
custom_minimum_size = Vector2( 96, 96 )
pivot_offset = Vector2( 48, 48 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true

[node name="ring2" type="TextureRect" parent="."]
self_modulate = Color( 0.862745, 0.176471, 0.329412, 1 )
offset_right = 96.0
offset_bottom = 96.0
custom_minimum_size = Vector2( 96, 96 )
pivot_offset = Vector2( 48, 48 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
expand = true

[node name="ring3" type="TextureRect" parent="."]
self_modulate = Color( 0.862745, 0.176471, 0.329412, 1 )
offset_right = 96.0
offset_bottom = 96.0
custom_minimum_size = Vector2( 96, 96 )
pivot_offset = Vector2( 48, 48 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )
expand = true

[node name="Finished" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 3 )
stretch_mode = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 3.0
anims/RESET = SubResource( 8 )
anims/bongo = SubResource( 7 )

[connection signal="focus_entered" from="Button" to="." method="select"]
[connection signal="focus_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="focus_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="toggled" from="Button" to="." method="_on_Button_toggled"]
